# panorama

./: .gitignore  README.md
recorder/: Cargo.toml
recorder/conf/: sources.json
recorder/src/: camera.rs  main.rs  settings.rs
