[package]
name = "recorder"
version = "0.1.0"
authors = ["ferdinand <beowulf1416@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10.1"
log = "0.4.11"
simplelog = "0.8.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
daemonize = "0.4.1"
